# c-assignment-basics

./: 04_loops.c  06_magic_numbers.c  CMakeLists.txt  Makefile  README.md
src/: 01_datatypes.c  02_operators.c  03_conditionals.c  05_command_line.c
